Related Work: Some trials on what say to start the related work.

--- a/report.tex
+++ b/report.tex
@@ -194,13 +194,25 @@
 %----------------------------------------------------
 %NAVrelatedwork
 \section{Related Work (~17pgs)}
-	In this section we start by describing work done on making programming accessible to everyone and extract the principles that should be followed to achieve it.
-
-	We move on to present some of the current widely used solutions -- or environments -- in the Generative Design community and evaluate their conformance with the principles defined earlier.
 
 %Integrated development environments in the web browser.
 	%How to make IDE for GD?
 	%Let's first look at anything about IDEs.
+	How to make a integrated programming environment in the web browser?
+	We may start by looking at what others have made like in the case of LightTable.
+	We should also look for guidelines on what problems to solve.
+	We'll look at Bret Victor's Learnable Programming.
+
+	How do we use the web browser, a platform originally thought to present web pages, to make any application? 
+	And more specifically, how do we use it to make a integrated programming environment for Generative Design?
+
+	There are several software development integrated development environments built on top of the web browser and other web technologies.
+	We can learn from them several things.
+	LightTable serves as an example of a desktop text editor built on top of web browser technologies.
+	It made several demonstrations on bringing interactivity and feedback to the programming experience.
+
+	It should be noted that architects won't appreciate some of the features that software developers ``don't live without''.
+	%All the above will probably be scraped.
 
 %Inspiration from anything about IDEs.
 \subsection{LightTable}
