Related Work: Even more trials on how to start the related work.

--- a/report.tex
+++ b/report.tex
@@ -203,6 +203,8 @@
 	We should also look for guidelines on what problems to solve.
 	We'll look at Bret Victor's Learnable Programming.
 
+
+
 	How do we use the web browser, a platform originally thought to present web pages, to make any application? 
 	And more specifically, how do we use it to make a integrated programming environment for Generative Design?
 
@@ -213,6 +215,25 @@
 
 	It should be noted that architects won't appreciate some of the features that software developers ``don't live without''.
 	%All the above will probably be scraped.
+
+
+	Making a browser based integrated development environment for Generative Design poses several challenges.
+	To overcome these challenges we can start by looking at how others have solved similar problems.
+	In our context there are several problems for which we can look for how others solved them.
+	These problems include:
+	\begin{itemize}
+		\item Using web browser technologies to build interactive applications.
+		\item Building applications similar to desktop applications using web technologies.
+		\item Understanding the guidelines for making useful integrated programming environments.
+		\item Building integrated programming environments for other domains.
+	\end{itemize}
+
+
+
+	Building applications for the web is different from building applications for desktop computers.
+	We have to look at what others have done in order to get clues on how we will build our own.
+
+
 
 %Inspiration from anything about IDEs.
 \subsection{LightTable}
