Related Work: Tentative version on how to start the related work.  - Makes a rough outline of what will be said inside the related work.

--- a/report.tex
+++ b/report.tex
@@ -198,24 +198,6 @@
 %Integrated development environments in the web browser.
 	%How to make IDE for GD?
 	%Let's first look at anything about IDEs.
-	How to make a integrated programming environment in the web browser?
-	We may start by looking at what others have made like in the case of LightTable.
-	We should also look for guidelines on what problems to solve.
-	We'll look at Bret Victor's Learnable Programming.
-
-
-
-	How do we use the web browser, a platform originally thought to present web pages, to make any application? 
-	And more specifically, how do we use it to make a integrated programming environment for Generative Design?
-
-	There are several software development integrated development environments built on top of the web browser and other web technologies.
-	We can learn from them several things.
-	LightTable serves as an example of a desktop text editor built on top of web browser technologies.
-	It made several demonstrations on bringing interactivity and feedback to the programming experience.
-
-	It should be noted that architects won't appreciate some of the features that software developers ``don't live without''.
-	%All the above will probably be scraped.
-
 
 	Making a browser based integrated development environment for Generative Design poses several challenges.
 	To overcome these challenges we can start by looking at how others have solved similar problems.
@@ -228,12 +210,10 @@
 		\item Building integrated programming environments for other domains.
 	\end{itemize}
 
-
-
-	Building applications for the web is different from building applications for desktop computers.
-	We have to look at what others have done in order to get clues on how we will build our own.
-
-
+	We start by looking at LightTable, a code editor that is implemented on top of web technologies.
+	We then to enumerate some guidelines for making a programming environment.
+	Two domain specific integrated programming environments are presented.
+	Then we progress to integrated programming environments more closely related to graphics followed by those related to CAD and finally those specific to architectural design.
 
 %Inspiration from anything about IDEs.
 \subsection{LightTable}
